--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2.1
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
-
+  slack: circleci/slack@3.4.2
+  
 jobs:
   build:
     machine:
